--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <indi.ssuf1998.vqrscan.CameraEffectView
+        <indi.ssuf1998.vqrscan.cameraeffectview.CameraEffectViewX
             android:id="@+id/mEffectView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
